--- a/ui/v2.5/src/components/Shared/styles.scss
+++ b/ui/v2.5/src/components/Shared/styles.scss
@@ -569,4 +569,8 @@ div.react-datepicker {
       border-right: 0;
     }
   }
+
+  &.collapsed:hover {
+    z-index: 101;
+  }
 }
